# VectorGraphicsEditor

./: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.bak2  CMakeLists.txt.bak3  CMakePresets.json  README.md
docs/: PROJECT_STRUCTURE.md  README.md  Windows_Build_Instructions.md
include/: bezier.h  canvas.h  colorpicker.h  colorstrip.h  colorwheel.h  document.h  ellipse.h  layer.h  line.h  mainwindow.h  rectangle.h  shape.h  svg_parser.h  text.h
src/: bezier.cpp  canvas.cpp  colorpicker.cpp  colorstrip.cpp  colorwheel.cpp  document.cpp  document.cpp.bak  ellipse.cpp  layer.cpp  line.cpp  main.cpp  mainwindow.cpp  mainwindow_backup.cpp  rectangle.cpp  shape.cpp  svg_parser.cpp  text.cpp
tests/: build_windows.bat  deploy_windows.bat  test-qt-integration.cpp  test-qt.cpp.bak  test_document.cpp  test_document.cpp.bak  test_main.cpp  test_shapes.cpp  test_shapes.cpp.bak
ui/: mainwindow.ui
